--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
 language: python
 sudo: required
 dist: trusty
+cache:
+  apt: true
+virtualenv:
+  system_site_packages: true
+
 branches:
   only:
     - master
+
+before_install:
+  - SITE_PKG_DIR=$VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/site-packages
+  - rm -f $VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/no-global-site-packages.txt
+
 install:
   - sudo apt-get update -qq
   - sudo apt-get install python-clang-3.5 libclang-3.5-dev python-dev cython python-numpy python-nose python-coverage -qq
+
 script: nosetests
