--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install python-clang-3.5 libclang-3.5-dev python-dev cython python-numpy python-nose python-coverage -qq
+  - sudo apt-get install python-clang-3.5 libclang-3.5-dev python-dev
+  - sudo pip install cython numpy nose coverage
 
 script: nosetests
