--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: python
+language: generic
 sudo: required
 dist: trusty
 cache:
@@ -16,7 +16,7 @@ before_install:
 
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install python-clang-3.5 libclang-3.5-dev python-dev -qq
+  - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev -qq
   - sudo pip install cython numpy nose coverage
 
 script: nosetests
