--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,8 @@ branches:
   only:
     - master
 
-before_install:
-  - SITE_PKG_DIR=$VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/site-packages
-  - rm -f $VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/no-global-site-packages.txt
-
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev -qq
-  - sudo pip install cython numpy nose coverage
+  - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev python-numpy cython python-nose python-coverage -qq
 
 script: nosetests
