--- a/pywrap/template_data/class.template
+++ b/pywrap/template_data/class.template
@@ -1,5 +1,3 @@
-
-
 cdef class {{ name }}:
     cdef cpp.{{ name }} * thisptr
     cdef bool delete_thisptr
@@ -12,20 +10,21 @@ cdef class {{ name }}:
         if self.delete_thisptr and self.thisptr != NULL:
             del self.thisptr
 
-{%- for ctor in ctors %}
-
+{%- if ctors %}
+{% for ctor in ctors %}
 {{ ctor }}
-
-{%- endfor %}
-
-{%- for field in fields %}
-
+{% endfor %}
+{%- endif %}
+{%- if fields -%}
+{% for field in fields %}
     {{ field["name"] }} = property(get_{{ field["name"] }}, set_{{ field["name"] }})
 
 {{ field["getter"] }}
 {{ field["setter"] }}
-{%- endfor %}
-
-{%- for method in methods %}
+{% endfor %}
+{%- endif -%}
+{%- if methods %}
+{% for method in methods %}
 {{ method }}
-{%- endfor %}
+{% endfor %}
+{%- endif %}
