Use cythonize instead of new process

--- a/pywrap/template_data/setup.template
+++ b/pywrap/template_data/setup.template
@@ -1,28 +1,29 @@
-def configuration(parent_package='', top_path=None):
-    from numpy.distutils.misc_util import Configuration
-    import numpy
-
-    config = Configuration('.', parent_package, top_path)
-    config.add_extension(
-        '{{ module }}',
-        sources=["{{ module }}.cpp",
-{%- for filename in filenames %}
-                 "{{ filename }}",
-{%- endfor %}
-                 ],
-        include_dirs=[
-            "{{ sourcedir }}",
-            numpy.get_include(),
-{%- for incdir in incdirs %}
-            "{{ incdir }}",
-{%- endfor %}
-        ],
-        define_macros=[("NDEBUG",)],
-        extra_compile_args=["-O3", "-std=c++11"],
-        language="c++")
-    return config
+from distutils.core import setup
+from distutils.extension import Extension
+from Cython.Build import cythonize
+import numpy
 
 
 if __name__ == '__main__':
-    from numpy.distutils.core import setup
-    setup(**configuration(top_path='').todict())
+    extensions = [
+        Extension(
+            "{{ module }}",
+            [
+                "{{ module }}.pyx",
+{%- for filename in filenames %}
+                "{{ filename }}",
+{%- endfor %}
+            ],
+            include_dirs = [
+                "{{ sourcedir }}",
+                numpy.get_include(),
+{%- for incdir in incdirs %}
+                "{{ incdir }}",
+{%- endfor %}
+            ],
+            define_macros = [("NDEBUG",)],
+            extra_compile_args = ["-O3", "-std=c++11"],
+            language = "c++"
+        )
+    ]
+    setup(ext_modules=cythonize(extensions))
