--- a/pywrap/template_data/setup.template
+++ b/pywrap/template_data/setup.template
@@ -1,10 +1,22 @@
 from distutils.core import setup
 from distutils.extension import Extension
+from distutils.sysconfig import get_config_vars
 from Cython.Build import cythonize
 import numpy
+import os
+
+
+def strict_prototypes_workaround():
+    # Workaround to remove '-Wstrict-prototypes' from compiler invocation
+    (opt,) = get_config_vars('OPT')
+    os.environ['OPT'] = " ".join(
+        flag for flag in opt.split() if flag != '-Wstrict-prototypes'
+    )
 
 
 if __name__ == '__main__':
+    strict_prototypes_workaround()
+
     extensions = [
         Extension(
             "{{ module }}",
