--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ branches:
 
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev python-numpy cython python-jinja2 python-nose python-coverage -qq
+  - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev python-numpy cython python-jinja2 python-nose python-coverage libeigen3-dev -qq
 
 script: nosetests
