--- a/pywrap/template_data/enum.template
+++ b/pywrap/template_data/enum.template
@@ -1,4 +1,8 @@
 cdef class {{ enum.tipe }}:
+{%- if comment %}
+    """{{ comment|indent(4) }}
+    """
+{%- endif %}
 {%- for constant in enum.constants %}
     {{ constant }} = cpp.{{ constant }}
 {%- endfor %}
