--- a/pywrap/template_data/class_decl.template
+++ b/pywrap/template_data/class_decl.template
@@ -1,5 +1,5 @@
 cdef extern from "{{ filename }}" namespace "{{ namespace }}":
-    cdef cppclass {{ name }}{%- if base %}({{ base }}){%- endif %}:
+    cdef cppclass {{ name }}:
 {%- if empty_body %}
         pass
 {%- else %}
