Put everything in one module

--- a/pywrap/template_data/setup.template
+++ b/pywrap/template_data/setup.template
@@ -20,9 +20,7 @@ if __name__ == '__main__':
         Extension(
             "{{ modulename }}",
             [
-{%- for module in modules %}
-                "{{ module }}.pyx",
-{%- endfor %}
+                "{{ modulename }}.pyx",
 {%- for filename in filenames %}
                 "{{ filename }}",
 {%- endfor %}
