--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
   - sudo apt-get update -qq
   - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev python-numpy cython python-jinja2 python-nose python-coverage libeigen3-dev -qq
 
-script: LD_LIBRARY_PATH=test/externallib nosetests PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages/ -sv
+script: LD_LIBRARY_PATH=test/externallib PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages/ nosetests -sv
