--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ virtualenv:
 branches:
   only:
     - master
+before_install:
+  - SITE_PKG_DIR=$VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/site-packages
+  - rm -f $VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/no-global-site-packages.txt
 
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install python python-dev python-clang-3.5 libclang-3.5-dev python-numpy cython python-jinja2 python-nose python-coverage libeigen3-dev -qq
+  - sudo apt-get install python python-dev python-pip python-clang-3.5 libclang-3.5-dev python-nose python-coverage libeigen3-dev -qq
+  - sudo pip install numpy cython jinja2
 
 script: LD_LIBRARY_PATH=test/externallib PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages/ nosetests -sv
